# errers

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.py
LICENSES/: LicenseRef-MIT-DND.txt
bundle/: README.txt  bundle.bat  errers.spec  main.py
src/: pylintrc
src/errers/: __init__.py  _app.py  _cli.py  _gui.py  _name.py
src/errers/_engine/: __init__.py  base.py  extractor.py  latex.py  plain.py
src/errers/icon/: Makefile  README.txt  errers.ai  errers.icns  errers.ico.license  errers32.png.license
src/errers/rules/: __init__.py  standard.py
templates/: _version.py
tests/: test_rules.py
